<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_home"
            android:icon="@mipmap/icon_mima"
            android:title="@string/drawer_layout_tab_home"></item>

        <item
            android:id="@+id/item_search"
            android:icon="@mipmap/icon_mima"
            android:title="@string/drawer_layout_tab_search"></item>

        <item
            android:id="@+id/item_contact"
            android:icon="@mipmap/icon_mima"
            android:title="@string/drawer_layout_tab_contact"></item>

        <item
            android:id="@+id/item_setting"
            android:icon="@mipmap/icon_mima"
            android:title="@string/drawer_layout_tab_setting"></item>
    </group>

</menu>