<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tay.freshnews.RegisterActivity">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_logo_height"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/edit_layout_padding"
        android:layout_below="@id/toolbar"
        android:src="@mipmap/logo"/>

    <LinearLayout
        android:id="@+id/account_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:orientation="vertical"
        android:background="@drawable/edit_text_normal"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <EditText
            style="@style/login_edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editText_height"
            android:id="@+id/editText"
            android:drawableLeft="@mipmap/icon_xingming"
            android:hint="@string/editText_register_name_hint"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/edit_text_normal_color"
            android:layout_marginLeft="@dimen/editText_padding"
            android:layout_marginRight="@dimen/editText_padding"/>

        <EditText
            style="@style/login_edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editText_height"
            android:id="@+id/editText2"
            android:drawableLeft="@mipmap/icon_mima"
            android:hint="@string/editText_register_password_hint"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/policy_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/account_layout"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/checkbox_selector"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/policy_text"
            android:layout_marginLeft="5dp"/>

    </LinearLayout>

    <Button
        android:id="@+id/register_in"
        style="@style/login_button_style"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_login_height"
        android:text="@string/button_register_in"
        android:layout_below="@+id/policy_layout"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/edit_layout_padding"
        android:background="@drawable/text_login_selector" />


</RelativeLayout>
