<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tay.freshnews.LoginActivity">

    <include layout="@layout/toolbar"
        android:id="@+id/toolbar"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_logo_height"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/edit_layout_padding"
        android:layout_below="@id/toolbar"
        android:src="@mipmap/logo"/>

    <LinearLayout
        android:id="@+id/editLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@drawable/edit_text_normal"
        android:layout_marginBottom="@dimen/edit_layout_padding"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/editText_login_name"
            style="@style/login_edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editText_height"
            android:inputType="textPersonName"
            android:hint="@string/editText_login_name_hint"
            android:drawableLeft="@mipmap/icon_xingming"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/edit_text_normal_color"
            android:layout_marginLeft="@dimen/editText_padding"
            android:layout_marginRight="@dimen/editText_padding"/>
        
        <EditText
            android:id="@+id/editText_password"
            style="@style/login_edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="@dimen/editText_height"
            android:inputType="textPassword"
            android:hint="@string/editText_login_password_hint"
            android:drawableLeft="@mipmap/icon_mima"/>

    </LinearLayout>

    <Button
        android:id="@+id/sign_in"
        style="@style/login_button_style"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_login_height"
        android:text="@string/button_sign_in"
        android:layout_below="@+id/editLayout"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:background="@drawable/text_login_selector" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/register_tip"
        android:layout_below="@+id/sign_in"
        android:padding="@dimen/textView_no_account_padding"
        android:layout_centerHorizontal="true"/>

    <RelativeLayout
        android:id="@+id/split_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_below="@+id/register_tip"
        android:layout_marginTop="@dimen/edit_layout_padding">
    
        <TextView
            android:id="@+id/text_other_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/editText_size"
            android:textColor="@color/colorDarkBlue"
            android:text="@string/textView_other_account_login"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_toLeftOf="@id/text_other_login"
            android:background="@color/colorDarkBlue"
            android:layout_centerVertical="true"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_toRightOf="@id/text_other_login"
            android:background="@color/colorDarkBlue"
            android:layout_centerVertical="true"/>
        
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/split_view"
        android:layout_marginLeft="@dimen/edit_layout_padding"
        android:layout_marginRight="@dimen/edit_layout_padding"
        android:layout_marginTop="@dimen/edit_layout_padding">

        <ImageView
            android:id="@+id/qq_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/qq_login_icon"
            android:layout_alignParentLeft="true"/>

        <ImageView
            android:id="@+id/weibo_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/weibo_login_icon"
            android:layout_centerHorizontal="true"/>

        <ImageView
            android:id="@+id/wechat_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/wechat_login_icon"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

</RelativeLayout>
